# Ana-Hellm-Deer-Haul-Putsch-dApp

./: .gitignore  .gitmodules  Dockerfile  LISEZMOI.md  README.md  docker-compose.yaml  eslint.config.mjs  package-lock.json  package.json  package.txt  pnpm-lock-back.yaml  pnpm-lock.yaml  pnpm-workspace.yam  pnpm-workspace.yaml  tsconfig.json
anchor/: .gitignore  Anchor.toml  Cargo.toml  Cargo.txt  build.rs  package.json  package.txt  pnpm-lock.yaml  tsconfig.json
anchor/.cargo/: Cargo.toml
anchor/.cargo/src/: lib.rs
anchor/.devcontainer/: Dockerfile  Dockerfile-back  devcontainer.json
anchor/programs/anachain/: Cargo.toml
anchor/programs/bonk-plugin/: Cargo.toml
anchor/programs/gateway/: Cargo.toml
anchor/programs/governance/: README.md
anchor/programs/governance-program-library-back/: Cargo.toml  README.md  package-lock.json  package.json
anchor/programs/governance-program-library-back/.github/workflows/: audit-sec3.yml  cargo-audit.yaml
anchor/programs/governance-program-library-back/programs/bonk-plugin/: Cargo.toml
anchor/programs/governance-program-library-back/programs/bonk-plugin/idls/: spl_token_staking.json
anchor/programs/governance-program-library-back/programs/gateway/: Cargo.toml
anchor/programs/governance-program-library-back/programs/nft-voter/: Cargo.toml
anchor/programs/governance-program-library-back/programs/nft-voter/src/state/: registrar.rs
anchor/programs/governance-program-library-back/programs/quadratic/: Cargo.toml
anchor/programs/governance-program-library-back/programs/realm-voter/: Cargo.toml
anchor/programs/governance-program-library-back/programs/realm-voter/src/state/: registrar.rs
anchor/programs/governance-program-library-back/programs/shared/: Cargo.toml
anchor/programs/governance-program-library-back/programs/token-haver/: Cargo.toml
anchor/programs/governance-program-library-back/programs/token-voter/: Cargo.toml
anchor/programs/governance-program-library-back/scripts/: getQuadraticVoterWeight.ts  updateVoterWeightRecord.ts
anchor/programs/governance-program-library-back/scripts/utils/: common.ts  constants.ts  plugin.ts
anchor/programs/governance-program-library-back/src/: deposite.rs  error.rs  index.ts  lib-back.rs  lib.rs  main.rs  memory.rs
anchor/programs/governance-program-library-back/src/common/: Client.ts  types.ts
anchor/programs/governance-program-library-back/src/gateway/: client.ts  gateway.json  gateway.ts
anchor/programs/governance-program-library-back/src/nftVoter/: client.ts  nft_voter.json  nft_voter.ts
anchor/programs/governance-program-library-back/src/quadraticVoter/: client.ts  quadratic.json  quadratic.ts
anchor/programs/governance-program-library-back/src/realmVoter/: client.ts  realm_voter.json  realm_voter.ts
anchor/programs/governance-program-library-back/src/tokenHaver/: client.ts  token_haver.json  token_haver.ts
anchor/programs/governance-program-library-back/src/tokenVoter/: client.ts  token_voter.json  token_voter.ts
anchor/programs/governance-program-library-back/tests/: nft-voter.ts
anchor/programs/governance-program-library-back/tests/bonk-plugin/: stake-idl.ts  test.ts
anchor/programs/governance-program-library-back/tests/token-voter/: test.ts
anchor/programs/governance/addin-api/: Cargo.toml
anchor/programs/governance/addin-mock/program/: Cargo.toml
anchor/programs/governance/chat/program/: Cargo.toml
anchor/programs/governance/program/: Cargo.toml
anchor/programs/governance/program/tests/fixtures/: .gitignore
anchor/programs/governance/test-sdk/: Cargo.toml
anchor/programs/governance/tools/: Cargo.toml
anchor/programs/nft-voter/: Cargo.toml
anchor/programs/program/: Cargo.toml
anchor/programs/program/src/: lib-build.rs  lib.rs
anchor/programs/quadratic/: Cargo.toml
anchor/programs/realm-voter/: Cargo.toml
anchor/programs/shared/: Cargo.toml
anchor/programs/token-haver/: Cargo.toml
anchor/programs/token-voter/: Cargo.toml
anchor/scripts/: getQuadraticVoterWeight.ts  updateVoterWeightRecord.ts
anchor/src/: index.ts  lib.rs
anchor/test_libc/: Cargo.toml
anchor/wallets/: anachain.json
src/components/account/: account-detail-feature.tsx  account-governance.tsx  account-ui.tsx
src/components/solana/wallet-components/: ana-chain-keypair.txt  ana-chain.json  anachain.json  id-keypair.txt
src/components/ui/: ui-layout.tsx
