[workspace]
members = [
    "programs/*",
    "programs/**"
    ]
resolver = "2"

exclude = []

[profile.dev]
codegen-units = 1
incremental = false
opt-level = 0

[profile.release]
overflow-checks = true
lto = "thin"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    "cfg(target_os, values(\"solana\"))",
    "cfg(feature, values(\"frozen-abi\", \"no-entrypoint\"))",
]

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false

#[patch.crates-io.curve25519-dalek]
#git = "https://github.com/solana-labs/curve25519-dalek.git"
# rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
#[patch.crates-io]
#solana-program = { version = "2.1.10" }
