[package]
name = "governance-program-library"
version = "0.2.2"
edition = "2021"

resolver = "2"

exclude = [
]

[dependencies]
anchor-lang = "0.30.1"
solana-program-test = "2.0.23"
solana-program = "2.0.23"
solana_rbpf = "0.8.5"


[profile.release]
overflow-checks = true

[lib]
name = "governance_program_library"
path = "src/lib.rs"

[patch.crates-io]
zeroize = { version = "1", optional = true }

