[package]
name = "bonk-plugin"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_bonk_plugin"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "=0.30.1"
spl-governance = { version = "3.1.1" , features = ["no-entrypoint"] }
spl-governance-tools =  "0.1.4"
solana-program = "2.0.23"
itertools = "0.14.0"
gpl-shared = { path = "../shared", features = ["no-entrypoint"] }
spl-token = { version = "7.0.0", features = [ "no-entrypoint" ] }
curve25519-dalek = "4.1.3"
zeroize = { version = "1", default-features = false, optional = true }

[dev-dependencies]
borsh = "1.5.5"
solana-sdk = "2.0.23"
solana-program-test = "2.0.23"
bytemuck = { version = "1.7", features = ["derive"] }
