[package]
name = "gpl-civic-gateway"
version = "0.1.1"
description = "SPL Governance addin for Civic Pass (www.civic.com)"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_civic_gateway"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
arrayref = "0.3.6"
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
enum_dispatch = "0.3.8"
itertools = "0.14.0"
num = "0.4"
num-derive = "0.4.1"
num-traits = "0.2"
solana-gateway  = { version = "0.4.0", features = ["no-entrypoint"] }
solana-program = "2.0.23"
spl-governance = { version = "4.0.0", features = ["no-entrypoint"] }
spl-governance-tools=  "0.1.4"
spl-governance-addin-api = "0.1.4"
spl-token = { version = "7.0.0", features = [ "no-entrypoint" ] }
solana_rbpf = "=0.8.5"
curve25519-dalek = "4.1.3"
zeroize = { version = "1", default-features = false, optional = true }


[dev-dependencies]
borsh = "1.5.5"
solana-sdk = "2.0.23"
solana-program-test = "2.0.23"
spl-governance-addin-mock = "0.1.4"
