[package]
name = "anachain"
version = "6.6.6"
description = "The no future of goverment..."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anachain"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
