[package]
name = "anachain"
version = "6.6.6"
description = "The no future of goverment..."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anachain"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
solana-program = "2.2.0"