[package]
name = "gpl-token-voter"
version = "0.0.1"
description = "SPL Governance plugin implementing token based governance power"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_token_voter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
arrayref = "0.3.7"
solana-program = "2.0.23"
spl-governance = { version = "4.0.0", features = ["no-entrypoint"] }
spl-tlv-account-resolution = { version = "0.9.0" }
spl-transfer-hook-interface = { version = "0.9.0" }
spl-governance-tools = "0.1.4"
spl-token = { version = "7.0.0", features = [ "no-entrypoint" ] }
spl-token-2022 = { version = "7.0.0", features = [ "no-entrypoint" ] }
ahash = "=0.8.11"
static_assertions = "1.1"
spl-governance-addin-api = "0.1.4"


[dev-dependencies]
borsh = "1.5.5"
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
spl-transfer-hook-example = { version = "0.6.0", features = ["no-entrypoint"] }
solana-sdk = "2.0.23"
solana-program-test = "2.0.23"
log = "0.4.14"
env_logger = "0.11.6"
spl-token-client = "0.14.0"

