[package]
name = "spl-governance"
version = "4.0.0"
description = "Solana Program Library Governance Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []
default = []
minimal = []

[dependencies]
arrayref = "0.3.9"
bincode = "2.0.0-rc.3"
borsh = "1.5.5"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = "1.0.217"
solana-program = "1.17.13"
spl-governance = "4.0.0"
spl-governance-tools = { version = "0.1.4", path = "../tools" }
spl-governance-addin-api = { version = "0.1.4", path = "../addin-api" }
thiserror = "2.0.11"

[dev-dependencies]
base64 = "0.22.1"
proptest = "1.6.0"
solana-program-test = "1.17.13"
solana-sdk = "1.17.13"
spl-governance-test-sdk = { version = "0.1.4", path = "../test-sdk" }
spl-governance-addin-mock = { version = "0.1.4", path = "../addin-mock/program" }

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true
