[package]
name = "spl-governance-test-sdk"
version = "0.1.4"
description = "Solana Program Library Governance Program Test SDK"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bincode = "2.0.0-rc.3"
borsh = "1.5.5"
lazy_static = "1.5.0"
serde = "1.0.217"
solana-program = "1.17.13"
solana-program-test = "2.0.24"
solana-sdk = "1.17.13"
spl-token = { version = "7.0.0", features = [
  "no-entrypoint",
] }