[package]
name = "spl-governance-tools"
version = "0.1.4"
description = "Solana Program Library Governance Tools"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
borsh = "1.5.5"
num-derive = "0.4.2"
num-traits = "0.2.19"
solana-program = { version = "1.17.13" }
thiserror = "2.0"
