[package]
name = "gpl-quadratic"
version = "0.1.1"
description = "SPL Governance quadratic voting plugin"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_quadratic"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
gpl-shared = { path = "../shared", features = ["no-entrypoint"] }
itertools = "0.14.0"
num = "0.4"
num-derive = "0.4.1"
solana-program = "1.18.0"
spl-governance = { version = "4.0", features = ["no-entrypoint"] }
spl-governance-tools=  "0.1.4"
spl-token = { version = "4.0.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
borsh = "1.2.1"
solana-sdk = "1.18.0"
solana-program-test = "1.18.0"
spl-governance-addin-mock = "0.1.4"