[package]
name = "gpl-token-haver"
version = "0.0.2"
description = "SPL Governance plugin granting governance power based on the nonzero presence of locked tokens"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_token_haver"

[features]
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["anchor-lang"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.30.1", optional = true }
anchor-spl = "0.30.1"
solana-program = "1.18.0"
spl-governance = { version = "4.0.0", features = ["no-entrypoint"] }


# tests are incomplete
 [dev-dependencies]
 borsh = "1.2.1"
