[package]
name = "spl-governance-addin-mock"
version = "0.1.4"
description = "Solana Program Library Governance Voter Weight Addin Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "1.5.5"
num-derive = "0.4.2"
num-traits = "0.2.19"
solana-program = "1.17.13"
spl-governance-addin-api = { version = "0.1.4", path = "../../addin-api" }
spl-governance-tools = { version = "0.1.4", path = "../../tools" }
thiserror = "2.0.11"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true
