[package]
name = "spl-governance-chat"
version = "0.2.9"
description = "Solana Program Library Governance Chat Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "1.5.5"
num-derive = "0.4.2"
num-traits = "0.2.19"
solana-program = "1.17.13"
spl-governance = { version = "4.0.0", path = "../../spl-governance", features = [
  "no-entrypoint",
] }
spl-governance-tools = { version = "0.1.4", path = "../../tools" }
spl-governance-addin-api = { version = "0.1.4", path = "../../addin-api" }
thiserror = "2.0.11"


[dev-dependencies]
solana-program-test = { version = "1.17.13"}
solana-sdk = "1.17.13"
spl-governance-test-sdk = { version = "0.1.4", path = "../../test-sdk" }
spl-governance-addin-mock = { version = "0.1.4", path = "../../addin-mock/program" }


[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true
